<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/view_8"
    android:background="@drawable/bg_white_stroked_round"
    android:elevation="@dimen/view_0"
    android:foreground="?selectableItemBackground"
    android:gravity="center_vertical"
    android:padding="@dimen/view_10"
    tools:ignore="UnusedAttribute"
    tools:targetApi="m">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/view_8"
        android:textColor="@color/logo_scheme_2"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Wrench" />

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/img_desc"
        android:padding="@dimen/view_24"
        android:scaleType="fitXY"
        android:src="@drawable/ic_ph_person_male_80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <TextView
        android:id="@+id/tv_stock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_8"
        android:layout_marginEnd="@dimen/view_8"
        android:background="@drawable/bg_scheme_2_round"
        android:gravity="center"
        android:paddingStart="@dimen/view_8"
        android:paddingTop="@dimen/view_2"
        android:paddingEnd="@dimen/view_8"
        android:paddingBottom="@dimen/view_2"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatar"
        tools:text="3/12 items" />

    <TextView
        android:id="@+id/tv_out_stock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/view_4"
        android:layout_marginEnd="@dimen/view_8"
        android:background="@drawable/bg_orange_round"
        android:gravity="center"
        android:paddingStart="@dimen/view_8"
        android:paddingTop="@dimen/view_2"
        android:paddingEnd="@dimen/view_8"
        android:paddingBottom="@dimen/view_2"
        android:text="@string/title_out_of_stock"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_12"
        app:layout_constraintBottom_toBottomOf="@+id/tv_stock"
        app:layout_constraintStart_toEndOf="@+id/tv_stock"
        app:layout_constraintTop_toTopOf="@+id/tv_stock" />

    <ImageView
        android:id="@+id/tv_loaned"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/view_4"
        android:contentDescription="@string/img_desc"
        android:gravity="end"
        android:src="@drawable/ic_served_18"
        android:text="@string/title_loaned"
        android:textColor="@color/orange"
        android:textSize="@dimen/text_13"
        app:layout_constraintBottom_toBottomOf="@+id/tv_out_stock"
        app:layout_constraintStart_toEndOf="@+id/tv_out_stock"
        app:layout_constraintTop_toTopOf="@+id/tv_out_stock"
        app:tint="@color/orange" />

</androidx.constraintlayout.widget.ConstraintLayout>
