<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:gravity="center">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_header_bottom"
        android:fillViewport="true"
        app:behavior_overlapTop="@dimen/view_64"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <FrameLayout
            android:id="@+id/fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/view_64" />
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="false"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_480"
            android:background="@android:color/white"
            android:fitsSystemWindows="true"
            app:contentScrim="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleEnabled="true">

            <View
                android:id="@+id/bg_expanded"
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_320"
                android:layout_gravity="bottom"
                android:background="@drawable/bg_header_bottom"
                app:layout_collapseMode="parallax" />

            <ImageView
                android:id="@+id/iv_sprite"
                android:layout_width="@dimen/view_160"
                android:layout_height="@dimen/view_160"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/view_48"
                android:contentDescription="@string/img_desc"
                android:scaleType="fitCenter"
                app:layout_collapseMode="parallax" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_32"
                    tools:text="Title" />

                <LinearLayout
                    android:id="@+id/types"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/view_8"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/iv_type_1"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/view_48"
                        android:contentDescription="@string/img_desc"
                        android:scaleType="fitCenter" />

                    <ImageView
                        android:id="@+id/iv_type_2"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/view_48"
                        android:contentDescription="@string/img_desc"
                        android:scaleType="fitCenter"
                        android:visibility="gone" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_flavor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="3"
                    android:paddingStart="@dimen/view_10"
                    android:paddingTop="@dimen/view_20"
                    android:paddingEnd="@dimen/view_10"
                    android:paddingBottom="@dimen/view_12"
                    android:textColor="@android:color/black"
                    tools:text="Title\nTitle\nTitle" />

                <RadioGroup
                    android:id="@+id/tabs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_header_bottom"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/view_20">

                    <RadioButton
                        android:id="@+id/bt_stats"
                        android:layout_width="@dimen/view_160"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/view_8"
                        android:background="@drawable/bg_my_switch"
                        android:button="@null"
                        android:gravity="center"
                        android:padding="@dimen/view_12"
                        android:text="@string/title_stats"
                        android:textAllCaps="true"
                        android:textColor="@color/radio_button_color" />

                    <RadioButton
                        android:id="@+id/bt_evolutions"
                        android:layout_width="@dimen/view_160"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/view_8"
                        android:background="@drawable/bg_my_switch"
                        android:button="@null"
                        android:gravity="center"
                        android:padding="@dimen/view_12"
                        android:text="@string/title_evolutions"
                        android:textAllCaps="true"
                        android:textColor="@color/radio_button_color" />

                </RadioGroup>
            </LinearLayout>

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_marginBottom="@dimen/view_80"
                app:contentInsetStart="0dp"
                app:layout_collapseMode="pin">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/toolbar_title"
                        style="@style/MyToolbarTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:alpha="0"
                        android:textColor="@android:color/white"
                        tools:text="Title" />

                    <ImageView
                        android:id="@+id/toolbar_arrow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:clickable="true"
                        android:contentDescription="@string/img_desc"
                        android:focusable="true"
                        android:padding="@dimen/view_12"
                        android:src="@drawable/ic_keyboard_arrow_down_24"
                        app:tint="@android:color/white" />
                </RelativeLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:id="@+id/shimmer_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:clickable="true"
        android:focusable="true"
        android:visibility="visible">

        <include layout="@layout/fragment_pokemon_info_shimmer" />
    </FrameLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>